--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+
+/* Rest CSS */
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
+  padding: 0px;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
+img {
+  display: inline-block;
+}
+
+.btn,
+button,
+button:focus,
+input:focus,
+textarea:focus,
+select,
+select:focus,
+a:focus {
+  /* !important用於覆蓋可能已應用於元素輪廓的任何其他現有樣式 */
+  outline: 0px;
+}
+
+button {
+  border: 0;
+  cursor: pointer;
+}
+
+button[disabled] {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  padding: 0 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input:required {
+  box-shadow: none;
+}
+
+input:invalid {
+  box-shadow: none;
+}
+
+#root {
+  margin: 0 165px;
+  height: 100%;
+}
+
+ul, ol, li {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+html{
+  height: 100%;
+  
+}
+
+
+
+main.site-main {
+  margin-top: 80px;
+  height: 669px;
+  width: 100%;
+}
+main.site-main .main-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  position: relative;
+  max-width: 1100px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.register-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 0 50%;
+  align-content: flex-start;
+  max-width: 50%;
+}
+.register-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38px;
+  color: #2A2A2A;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 0 100%;
+  align-content: flex-start;
+  max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
